--- a/01-birthday-reminder/setup/src/index.css
+++ b/01-birthday-reminder/setup/src/index.css
@@ -41,7 +41,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
   --max-width: 1170px;
   --fixed-width: 450px;
-  --clr-pink: #f28ab2;
+  --clr-pink: #e4e72fab;
 }
 /*
 =============== 
@@ -52,13 +52,13 @@ Global Styles
 *,
 ::after,
 ::before {
-  margin: 0;
+  margin: 1rem;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-pink);
   color: var(--clr-grey-9);
   line-height: 1.5;
@@ -93,6 +93,7 @@ h4 {
 }
 p {
   margin-bottom: 1.25rem;
+  margin-left: 3rem;
   color: var(--clr-grey-5);
 }
 @media screen and (min-width: 800px) {
@@ -145,34 +146,46 @@ main {
   margin: 5rem 0;
   max-width: var(--fixed-width);
   background: var(--clr-white);
-  border-radius: var(--radius);
+  border-radius: 5%;
   padding: 1.5rem 2rem;
   box-shadow: var(--dark-shadow);
 }
 .container h3 {
-  font-weight: normal;
-  text-transform: none;
-  margin-bottom: 2rem;
+  color: rgba(52, 58, 57, 0.575);
+  background: #fff;
+  padding-left: 3rem;
+  border-radius: 15%;
+  font-weight: lighter;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-transform: capitalize;
+  margin: -2.5rem 2rem 2rem 5rem;
 }
 .person {
+  background: #c1f7e5ab;
+  border-radius: 10%;
+  padding-left: 1rem;
   display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 0.75rem;
+  grid-template-columns: auto 10fr 10fr;
+  column-gap: 1rem;
   margin-bottom: 1.5rem;
   align-items: center;
 }
 .person img {
   width: 75px;
   height: 75px;
+  border-color: rgb(132, 150, 199);
+  border-style: solid;
+  border-width: 0.2;
   object-fit: cover;
   border-radius: 50%;
   box-shadow: var(--light-shadow);
 }
 .person h4 {
-  margin-bottom: 0.35rem;
+  margin: 0rem 1rem 1rem 0rem;
 }
 .person p {
-  margin-bottom: 0;
+  margin: 0rem 1rem 1rem 0rem;
+  padding-left: 1rem;
 }
 .container button {
   color: var(--clr-white);
