--- a/01-birthday-reminder/setup/src/index.css
+++ b/01-birthday-reminder/setup/src/index.css
@@ -57,6 +57,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
+  align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-pink);
@@ -123,14 +124,14 @@ p {
 
 /* section */
 .section {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: var(--max-width);
+  width: auto;
+  margin: 10 auto;
+  max-width: max-content;
 }
 
 @media screen and (min-width: 992px) {
   .section {
-    width: 95vw;
+    width: auto;
   }
 }
 
@@ -142,7 +143,8 @@ main {
 }
 
 .container {
-  width: 90vw;
+  align-items: flex-end;
+  width: 3000vw;
   margin: 5rem 0;
   max-width: var(--fixed-width);
   background: var(--clr-white);
@@ -151,22 +153,24 @@ main {
   box-shadow: var(--dark-shadow);
 }
 .container h3 {
+  position: absolute;
   color: rgba(52, 58, 57, 0.575);
   background: #fff;
-  padding-left: 3rem;
+  padding-left: 0.3rem;
   border-radius: 15%;
   font-weight: lighter;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-transform: capitalize;
-  margin: -2.5rem 2rem 2rem 5rem;
+  margin: -2.5rem 2rem 2rem 6rem;
 }
 .person {
   background: #c1f7e5ab;
   border-radius: 10%;
   padding-left: 1rem;
   display: grid;
-  grid-template-columns: auto 10fr 10fr;
-  column-gap: 1rem;
+  grid-template-columns: auto 5fr 5fr;
+  column-gap: 0.3rem;
+  padding-top: 1rem;
   margin-bottom: 1.5rem;
   align-items: center;
 }
@@ -183,22 +187,27 @@ main {
 .person h4 {
   margin: 0rem 1rem 1rem 0rem;
 }
+.person h5 {
+  margin: 0rem 1rem 1rem 0rem;
+}
 .person p {
   margin: 0rem 1rem 1rem 0rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
 }
 .container button {
   color: var(--clr-white);
+  font-family: cursive;
   display: block;
   width: 100%;
   border-color: transparent;
-  background: var(--clr-pink);
+  border-radius: 70%;
+  background: rgba(167, 115, 20, 0.712);
   margin: 2rem auto 0 auto;
   text-transform: capitalize;
   font-size: 1.2rem;
   padding: 0.5rem 0;
   letter-spacing: var(--spacing);
-  border-radius: var(--radius);
-  outline: 1px solid rgba(242, 138, 178, 0.8);
+  border-radius: 5%;
+  outline: 1px rgba(15, 12, 13, 0.8);
   cursor: pointer;
 }
