--- a/01-birthday-reminder/setup/src/index.css
+++ b/01-birthday-reminder/setup/src/index.css
@@ -41,7 +41,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
   --max-width: 1170px;
   --fixed-width: 450px;
-  --clr-pink: #e4e72fab;
+  --clr-pink: #d1e8f5ab;
 }
 /*
 =============== 
@@ -60,13 +60,18 @@ body {
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-pink);
+  background: radial-gradient(
+    rgba(126, 228, 113, 0.521),
+    rgba(111, 185, 163, 0.637),
+    rgb(80, 80, 240)
+  );
   color: var(--clr-grey-9);
   line-height: 1.5;
   font-size: 0.875rem;
 }
 ul {
   list-style-type: none;
+  margin: 10rem;
 }
 a {
   text-decoration: none;
@@ -145,9 +150,9 @@ main {
 .container {
   align-items: flex-end;
   width: 3000vw;
-  margin: 5rem 0;
+  margin: 0 0 0 25rem;
   max-width: var(--fixed-width);
-  background: var(--clr-white);
+  background: linear-gradient(to bottom, white, wheat, grey);
   border-radius: 5%;
   padding: 1.5rem 2rem;
   box-shadow: var(--dark-shadow);
@@ -161,7 +166,7 @@ main {
   font-weight: lighter;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-transform: capitalize;
-  margin: -2.5rem 2rem 2rem 6rem;
+  margin: -2.5rem 2rem 2rem 4.5rem;
 }
 .person {
   background: #c1f7e5ab;
