--- a/15-cocktails/setup/src/index.css
+++ b/15-cocktails/setup/src/index.css
@@ -326,6 +326,7 @@ Cocktail
   text-align: center;
 }
 .drink {
+  height: fit-content;
   width: var(--smallWidth);
   max-width: var(--fullWidth);
   margin: 0 auto;
@@ -351,7 +352,89 @@ Cocktail
 .drink-info {
   padding-top: 2rem;
 }
+.recomendation {
+  display: grid;
+  margin: auto;
+  margin-top: 3rem;
+  margin-left: 1rem;
+  margin-right: 3rem;
+  grid-template-columns: auto auto auto;
+  justify-items: space-between;
+  column-gap: 1rem;
+}
+.small-img {
+  height: fit-content;
+  padding: 2rem;
+}
+.small-img:hover {
+  box-shadow: var(--darkShadow);
+  background: var(--primaryLightColor);
+}
+.recomendation img {
+  width: 190.203px;
+  height: 224.219px;
+}
+@media screen and (max-width: 500px) {
+  .navbar {
+    width: 400px;
+    margin: 0.3rem;
+  }
+  .recomendation {
+    display: grid;
+    margin: auto;
+    margin-top: 3rem;
+    margin-left: 2rem;
+    margin-right: 3rem;
+    grid-template-columns: auto auto auto;
+    justify-items: space-between;
+    column-gap: 0.3rem;
+  }
+  .small-img {
+    height: fit-content;
+    padding: 0.6rem;
+  }
+  .small-img:hover {
+    box-shadow: var(--darkShadow);
+    background: var(--primaryLightColor);
+  }
+  .recomendation img {
+    width: 90.203px;
+    height: 124.219px;
+  }
+}
+.recomendation-title {
+  padding-left: 10%;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.movie-title {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  letter-spacing: normal;
+  font-size: 100%;
+}
 @media screen and (min-width: 992px) {
+  .recomendation {
+    display: grid;
+    margin: auto;
+    margin-top: 3rem;
+    margin-left: 5rem;
+    margin-right: 3rem;
+    grid-template-columns: auto auto auto auto auto;
+    justify-items: space-between;
+    column-gap: 1rem;
+  }
+  .small-img {
+    height: fit-content;
+    padding: 1rem;
+  }
+  .small-img:hover {
+    box-shadow: var(--darkShadow);
+    background: var(--primaryLightColor);
+  }
+  .recomendation img {
+    width: 190.203px;
+    height: 224.219px;
+  }
   .drink {
     display: grid;
     grid-template-columns: 2fr 3fr;
