--- a/15-cocktails/setup/src/index.css
+++ b/15-cocktails/setup/src/index.css
@@ -3,6 +3,7 @@
 Variables 
 ======
 */
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 :root {
   --primaryLightColor: #d4e6a5;
   --primaryColor: #476a2e;
@@ -228,6 +229,9 @@ Cocktails List
 }
 
 @media screen and (min-width: 576px) {
+  .movies {
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  }
   .cocktails-center {
     grid-template-columns: repeat(auto-fill, minmax(338.8px, 1fr));
   }
@@ -374,10 +378,82 @@ Cocktail
   width: 190.203px;
   height: 224.219px;
 }
+.movies {
+  width: 90vw;
+  max-width: var(--max-width);
+  display: grid;
+  gap: 2rem;
+  margin: 0 auto;
+  padding-bottom: 5rem;
+  padding-top: 3rem;
+}
+.movie {
+  position: relative;
+  overflow: hidden;
+}
+.movie img {
+  width: 100%;
+  height: 400px;
+  display: block;
+  object-fit: cover;
+}
+.movie-info {
+  display: grid;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  background: rgba(0, 0, 0, 0.6);
+  transform: translateY(100%);
+  transition: var(--transition);
+}
+.heading {
+  font-family: "Abril Fatface", cursive;
+  color: #757ecc;
+
+  opacity: 0.5;
+  margin-top: 2rem;
+  padding-left: 10%;
+}
+.movie-info h4 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: white;
+  margin-bottom: 0.25rem;
+}
+.movie-info button {
+  background: none;
+  color: white;
+  margin: 5px;
+  border-style: double;
+  font-size: large;
+  padding: 8px;
+  cursor: pointer;
+}
+.movie-info p {
+  margin-bottom: 0;
+  color: var(--clr-white);
+}
+.movie:hover .movie-info {
+  transform: translateY(0);
+}
+
 @media screen and (max-width: 500px) {
+  .logo {
+    margin-left: 2rem;
+    margin-top: -0.5rem;
+  }
   .navbar {
-    width: 400px;
+    width: 450px;
     margin: 0.3rem;
+  }
+  .nav-center {
+    display: grid;
+    margin-left: 5rem;
+  }
+  .nav-links {
+    margin-top: -1.4rem;
   }
   .recomendation {
     display: grid;
